--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <button id="statusCheck">Check Status</button>
+    <h4>To display the output inspect and console</h4>
     <script>
         console.log('Initially ' + (window.navigator.onLine ? 'on' : 'off') + 'line');
         
